--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #222;
   height: 100%;
 }
 
@@ -120,15 +120,20 @@ body {
   color: #fff;
   line-height: 1.5em;
   font-size: 1.6em;
-  background-color: #f16059;
+  background-color: #222;
   height: 300px;
   width: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-right: #ccc 1px solid;
+  padding-right: 15px;
 }
 
-
+.wrapper span {
+    font-family: 'Lora';
+    font-size: 1.3 em;
+}
 
 
 /* ==========================================================================
