Changed Background, Added Header, and Altered Border

--- a/css/main.css
+++ b/css/main.css
@@ -96,46 +96,73 @@ textarea {
    ========================================================================== */
 
 
+ /*Large Background Image*/
 html {
-  background-color: #222;
-  height: 100%;
-}
-
-body {
-  font-family: 'Source Sans Pro', sans-serif;
-  padding: 2em;
-  font-size: 1.25em;
-  height: 100%;
-}
-
-.wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
-  display: flex;
-  justify-content: space-between;
-}
-
-.div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #222;
-  height: 300px;
-  width: 30%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-right: #ccc 1px solid;
-  padding-right: 15px;
-}
-
-.wrapper span {
-    font-family: 'Lora';
-    font-size: 1.3 em;
-}
-
-
+    background-color: midnightblue;
+    height: 100%;
+    width: 100%;
+  }
+  
+  body {
+    font-family: 'Source Sans Pro', sans-serif;
+    padding: 0em 2em;
+    font-size: 1.25em;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    max-width: 1200px;
+  }
+  
+  p span {
+    font-family: 'Lora', sans-serif;
+  }
+  
+  header,
+  footer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+  
+  }
+  
+  header h1 {
+    font-family: 'Lora', sans-serif;
+    font-size: 2em;
+  }
+  
+  main {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid cornflowerblue;
+  }
+  
+  main p {
+    font-size: 1.35em;
+  }
+  
+  .flex-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.5em;
+    font-size: 1em;
+    border-top: 1px solid cornflowerblue;
+  }
+  
+  footer {
+    border-top: 1px solid cornflowerblue;
+  }
+  
+  footer i {
+    padding: 30px 20px 0 0;
+  }
 /* ==========================================================================
    Helper classes
    ========================================================================== */
